[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sawtooth-memory"
version = "0.1.0"
description = "Async context manager middleware for LLM agents — solves Lost in the Middle via local Ollama compression."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "context", "memory", "middleware", "ollama"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

dependencies = [
    "pydantic>=2.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "tenacity>=8.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

langgraph = [
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["sawtooth_memory"]
