[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sawtooth-memory"
version = "0.3.0"
description = "An asynchronous, non-blocking hierarchical memory framework for LLM agents that eliminates main-thread latency and mitigates context degradation via multi-tiered background compression and deterministic entity ledgers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agents", "context", "memory", "middleware"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

dependencies = [
    "pydantic>=2.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "tenacity>=8.4.0",
    "aiofiles>=23.2.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.12",
    "asyncpg>=0.29",
    "redis>=5.0.0",
    "ruff>=0.15",
    "pre-commit>=4.0",
]

redis = [
    "redis>=5.0.0",
]

langchain = [
    "langchain-core>=0.2.0",
]

postgres = [
    "asyncpg>=0.29",
]

langgraph = [
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
]

all = [
    "asyncpg>=0.29",
    "redis>=5.0.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "benchmarks"]
markers = [
    "benchmark: performance benchmark (may be slower)",
    "integration_benchmark: end-to-end benchmark requiring mocked LLM backends",
]

[tool.pytest-benchmark]
min_rounds = 5
warmup = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["sawtooth_memory"]

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true
